--- a/p3/db/practica3.lpc.html
+++ b/p3/db/practica3.lpc.html
@@ -48,23 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst</TD>
-<TD >2</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >2</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst5|alu1|comparador|comp1|comp3</TD>
+<TD >inst5|alu1|comparador|comp1|comp1|comp3</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,7 +64,39 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst5|alu1|comparador|comp1|comp2</TD>
+<TD >inst5|alu1|comparador|comp1|comp1|comp2</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp1|comp1|comp1</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp1|comp1|comp0</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -97,6 +113,70 @@
 </TR>
 <TR >
 <TD >inst5|alu1|comparador|comp1|comp1</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp1|comp0|comp3</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp1|comp0|comp2</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp1|comp0|comp1</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp1|comp0|comp0</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -113,7 +193,7 @@
 </TR>
 <TR >
 <TD >inst5|alu1|comparador|comp1|comp0</TD>
-<TD >4</TD>
+<TD >10</TD>
 <TD >1</TD>
 <TD >0</TD>
 <TD >1</TD>
@@ -129,7 +209,7 @@
 </TR>
 <TR >
 <TD >inst5|alu1|comparador|comp1</TD>
-<TD >10</TD>
+<TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,7 +224,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst5|alu1|comparador|comp0|comp3</TD>
+<TD >inst5|alu1|comparador|comp0|comp1|comp3</TD>
 <TD >4</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,7 +240,39 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst5|alu1|comparador|comp0|comp2</TD>
+<TD >inst5|alu1|comparador|comp0|comp1|comp2</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp0|comp1|comp1</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp0|comp1|comp0</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -177,6 +289,70 @@
 </TR>
 <TR >
 <TD >inst5|alu1|comparador|comp0|comp1</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp0|comp0|comp3</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp0|comp0|comp2</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp0|comp0|comp1</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador|comp0|comp0|comp0</TD>
 <TD >4</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -193,22 +369,6 @@
 </TR>
 <TR >
 <TD >inst5|alu1|comparador|comp0|comp0</TD>
-<TD >4</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >3</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >inst5|alu1|comparador|comp0</TD>
 <TD >10</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -224,8 +384,24 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst5|alu1|comparador</TD>
+<TD >inst5|alu1|comparador|comp0</TD>
 <TD >18</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst5|alu1|comparador</TD>
+<TD >34</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >2</TD>
@@ -2786,13 +2962,13 @@
 <TR >
 <TD >inst5</TD>
 <TD >4</TD>
-<TD >44</TD>
+<TD >12</TD>
 <TD >0</TD>
-<TD >44</TD>
+<TD >12</TD>
 <TD >64</TD>
-<TD >44</TD>
-<TD >44</TD>
-<TD >44</TD>
+<TD >12</TD>
+<TD >12</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
