--- a/p4/db/pilaFinal.lpc.html
+++ b/p4/db/pilaFinal.lpc.html
@@ -3232,8 +3232,24 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst1|conv1</TD>
+<TD >18</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst1</TD>
-<TD >37</TD>
+<TD >39</TD>
 <TD >0</TD>
 <TD >4</TD>
 <TD >0</TD>
