--- a/p4/db/pilaFinal.lpc.html
+++ b/p4/db/pilaFinal.lpc.html
@@ -3280,12 +3280,44 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst4|letra</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst4|mensaje</TD>
+<TD >4</TD>
+<TD >52</TD>
+<TD >0</TD>
+<TD >52</TD>
+<TD >80</TD>
+<TD >52</TD>
+<TD >52</TD>
+<TD >52</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst4</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >11</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
