--- a/matrizRGB/db/matriz.lpc.html
+++ b/matrizRGB/db/matriz.lpc.html
@@ -32,15 +32,31 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst|sal</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst|deb1</TD>
 <TD >6</TD>
-<TD >3</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >3</TD>
+<TD >1</TD>
 <TD >5</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
